# config

./: .clang-format  .clangd  CMakeLists.txt  MSVC-build.bat  README.md  VSC-settings.json  WindowsTerminal.json  ZED-settings.json  cmake-build.bat  msvc-build.bat  settings.json  vscode-settings.json  zed-settings.json
